fix/contacts list z index on mobile

--- a/style.css
+++ b/style.css
@@ -1195,7 +1195,7 @@ input:checked + .slider:before {
         position: absolute;
         width: 60%;
         height: 100%;
-        z-index: 10;
+        z-index: 110;
         background-color: #121212;
         transform: translateX(-100%);
         transition: transform .3s ease;
